add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/common")

set(HEADERS_ALGORITHMS
   ${HEADERS_ALGORITHMS}
   ${CMAKE_CURRENT_SOURCE_DIR}/problem.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem1.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem2.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem3.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem4.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem5.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem6.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem7.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem8.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem9.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem10.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem11.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem12.hpp
   PARENT_SCOPE
)

set(SOURCES_ALGORITHMS
   ${SOURCES_ALGORITHMS}
   ${CMAKE_CURRENT_SOURCE_DIR}/problem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem1.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem2.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem3.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem4.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem5.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem6.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem7.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem8.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem9.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem10.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem11.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/problem12.cpp
   PARENT_SCOPE
)
